--- a/ochentaytres-back/src/main/resources/application.properties
+++ b/ochentaytres-back/src/main/resources/application.properties
@@ -47,7 +47,7 @@ spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 # spring.datasource.url=jdbc:h2:file:./data/testDatabase
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=p
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Data Definition Language (DDL) actions on database
